<resources>
    <string name="app_name">TP3</string>
    <string name="label1">Num</string>
    <string name="label2">Nom</string>
    <string name="label3">prenom</string>
    <string name="label4">tel</string>
    <string name="label5">adresse</string>
    <string name="label6">cp</string>
    <string name="label7">email</string>
    <string name="label8">metier</string>
    <string name="label9">situation</string>
    <string name="saisi2">saisir</string>
    <string name="saisi3">0</string>
    <string name="bfichier">sauvegarder</string>
    <string name="bajouter">ajouter</string>
    <string name="bprec">précedent</string>
    <string name="bsuiv">suivant</string>
    <string name="bdebut">début</string>
    <string name="bmilieu">milieu</string>
    <string name="bfin">fin</string>
    <string name="bnum">numéro</string>
    <string name="bsupp">supprimer</string>
    <string name="bajouterchamp">ajouter Champ</string>
    <string name="dialogue"> Saisir un numéro de contact</string>
    <string name="ajouterChamp"> Saisir l\'intitulé du nouveau champ</string>
    <string name="ok">ok</string>
    <string name="annuler">Annuler</string>
    <string name="invalide">Numéro invalide</string>



    <string name="action_settings">Settings</string>

    <string name="one">ONE</string>
    <string name="eight">EIGHT</string>
    <string name="five">FIVE</string>
    <string name="four">FOUR</string>
    <string name="nine">NINE</string>
    <string name="seven">SEVEN</string>
    <string name="six">SIX</string>
    <string name="ten">TEN</string>
    <string name="three">THREE</string>
    <string name="two">TWO</string>
    <string name="title_activity_scrollable_tabs">Scrollable Tabs</string>
    <string name="title_activity_simple_tabs">Simple Tabs</string>
    <string name="btn_simple_tabs">Simple Tabs</string>
    <string name="btn_scrollable_tabs">Scrollable Tabs</string>
    <string name="btn_icon_text_tabs">Icon &amp; Text Tabs</string>
    <string name="btn_icon_tabs">Only Icon Tabs</string>
    <string name="btn_pinned_top_tabs">Pinned To Top Tabs</string>
    <string name="title_activity_icon_text_tabs">Icon and Text Tabs</string>
    <string name="title_activity_icon_tabs">Icon Tabs</string>
    <string name="btn_custom_icon_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_custom_view_icon_text_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_pinned_top_tabs">Pin Top Tabs</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="hello_world">Hello world!</string>

</resources>