<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="281dp"
        android:layout_height="379dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="233dp">

            <Button
                android:id="@+id/bouttonAvant"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:onClick="bMoins"
                android:padding="0dp"
                android:paddingStart="9dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:rotation="90"
                android:textAlignment="center"
                app:icon="@android:drawable/arrow_down_float"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/frameLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="168dp"
                android:layout_height="149dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toStartOf="@+id/bouttonApres"
                app:layout_constraintStart_toEndOf="@+id/bouttonAvant"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="149dp"
                    tools:src="" />
            </FrameLayout>

            <Button
                android:id="@+id/bouttonApres"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:onClick="bPlus"
                android:padding="0px"
                android:paddingStart="9dp"
                android:paddingLeft="0dp"
                android:paddingTop="00dp"
                android:paddingEnd="0dp"
                android:paddingRight="00dp"
                android:paddingBottom="0px"
                android:rotation="90"
                android:textAlignment="center"
                app:icon="@android:drawable/arrow_up_float"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/frameLayout"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/bajouterChamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/bajouterchamp"
                    android:textColor="#2196F3"
                    android:textColorHighlight="#FF9800"
                    android:textColorHint="#FAFAFA"
                    android:textColorLink="#EB4D42" />

                <Button
                    android:id="@+id/bPrendrePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/prendrePhoto"
                    android:textColor="#2196F3"
                    android:textColorHighlight="#FF9800"
                    android:textColorHint="#FAFAFA"
                    android:textColorLink="#EB4D42" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow style="@style/TableRowStyle">

                <Button
                    android:id="@+id/bouttonDebut"
                    style="@style/ButtonStyle"
                    android:hint="@string/bdebut"
                    android:onClick="cDebut" />

                <Button
                    android:id="@+id/bouttonSuivant"
                    style="@style/ButtonStyle"
                    android:hint="@string/bsuiv"
                    android:onClick="cSuivant" />

                <Button
                    android:id="@+id/bouttonPrecedent"
                    style="@style/ButtonStyle"
                    android:hint="@string/bprec"
                    android:onClick="cPrecedent" />

            </TableRow>

            <TableRow style="@style/TableRowStyle">

                <Button
                    android:id="@+id/bouttonFin"
                    style="@style/ButtonStyle"
                    android:hint="@string/bfin"
                    android:onClick="cFin" />

                <Button
                    android:id="@+id/bouttonMilieu"
                    style="@style/ButtonStyle"
                    android:hint="@string/bmilieu"
                    android:onClick="cMilieu" />

                <Button
                    android:id="@+id/bouttonNumero"
                    style="@style/ButtonStyle"
                    android:hint="@string/bnum"
                    android:onClick="cNumero" />

            </TableRow>

            <TableRow style="@style/TableRowStyle">

                <Button
                    android:id="@+id/bouttonSupprimer"
                    style="@style/ButtonStyle"
                    android:hint="@string/bsupp"
                    android:onClick="cSupprimer" />

                <Button
                    android:id="@+id/bouttonAjouter"
                    style="@style/ButtonStyle"
                    android:hint="@string/bajouter"
                    android:onClick="ajouter" />

                <Button
                    android:id="@+id/bouttonSauvegarder"
                    style="@style/ButtonStyle"
                    android:hint="@string/bfichier"
                    android:onClick="sauvegarder" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="375dp">

        <TableLayout
            android:id="@+id/tableauChamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                style="@style/TableRowStyle">

                <TextView
                    android:id="@+id/textViewNum"
                    style="@style/TextViewStyle"
                    android:hint="@string/label1"/>

                <TextView
                    android:id="@+id/textViewSNum"
                    style="@style/TextViewStyle"
                    android:hint="@string/saisi3" />
            </TableRow>

            <TableRow
                style="@style/TableRowStyle">

                <TextView
                    android:id="@+id/textViewNom"
                    style="@style/TextViewStyle"
                    android:hint="@string/label2" />

                <EditText
                    android:id="@+id/editTextSNom"
                    style="@style/EditTextStyle"/>
            </TableRow>

            <TableRow
                style="@style/TableRowStyle">

                <TextView
                    android:id="@+id/textViewPrenom"
                    style="@style/TextViewStyle"
                    android:hint="@string/label3" />

                <EditText
                    android:id="@+id/editTextSPrenom"
                    style="@style/EditTextStyle" />
            </TableRow>

            <TableRow
                style="@style/TableRowStyle">

                <TextView
                    android:id="@+id/textViewTel"
                    style="@style/TextViewStyle"
                    android:hint="@string/label4" />

                <EditText
                    android:id="@+id/editTextSTel"
                    android:inputType="phone"
                    style="@style/EditTextStyle" />
            </TableRow>

            <TableRow
                style="@style/TableRowStyle">

                <TextView
                    android:id="@+id/textViewAdresse"
                    style="@style/TextViewStyle"
                    android:hint="@string/label5" />

                <EditText
                    android:id="@+id/editTextSAdresse"
                    style="@style/EditTextStyle" />
            </TableRow>

            <TableRow
                style="@style/TableRowStyle">

                <TextView
                    android:id="@+id/textViewCp"
                    style="@style/TextViewStyle"
                    android:hint="@string/label6" />

                <EditText
                    android:id="@+id/editTextSCp"
                    android:inputType="number"
                    style="@style/EditTextStyle" />
            </TableRow>

            <TableRow
                style="@style/TableRowStyle">

                <TextView
                    android:id="@+id/textViewEmail"
                    style="@style/TextViewStyle"
                    android:hint="@string/label7" />

                <EditText
                    android:id="@+id/editTextSEmail"
                    android:inputType="textEmailAddress"
                    style="@style/EditTextStyle" />
            </TableRow>

            <TableRow
                style="@style/TableRowStyle">

                <TextView
                    android:id="@+id/textViewMetier"
                    style="@style/TextViewStyle"
                    android:hint="@string/label8" />

                <EditText
                    android:id="@+id/editTextSMetier"
                    style="@style/EditTextStyle" />
            </TableRow>

            <TableRow
                style="@style/TableRowStyle">

                <TextView
                    android:id="@+id/textViewSituation"
                    style="@style/TextViewStyle"
                    android:hint="@string/label9" />

                <EditText
                    android:id="@+id/editTextSSituation"
                    style="@style/EditTextStyle" />
            </TableRow>

        </TableLayout>
    </ScrollView>

</LinearLayout>